--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\hsingh\AppData\Local\Temp\testng-eclipse-196215557\testng-customsuite.xml</span>
+                    <span>C:\Users\hsingh\AppData\Local\Temp\testng-eclipse--140590804\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">11 methods,   11 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,57 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0000_Debug_Testing" hash-for-method="logInWithExpirixAdmin">logInWithExpirixAdmin</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0002_login_With_Exmpirix_Admin" hash-for-method="TabAvailabilityValidation">TabAvailabilityValidation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0000_Debug_Testing" hash-for-method="scriptTabValidation">scriptTabValidation</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0002_login_With_Exmpirix_Admin" hash-for-method="alertTabValidation">alertTabValidation</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0002_login_With_Exmpirix_Admin" hash-for-method="dashBoardTabValidation">dashBoardTabValidation</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0002_login_With_Exmpirix_Admin" hash-for-method="footerMandatoryDetails">footerMandatoryDetails</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0002_login_With_Exmpirix_Admin" hash-for-method="hammerTabValidation">hammerTabValidation</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0002_login_With_Exmpirix_Admin" hash-for-method="headerMandatoryDetails">headerMandatoryDetails</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0002_login_With_Exmpirix_Admin" hash-for-method="logInWithExpirixAdmin">logInWithExpirixAdmin</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0002_login_With_Exmpirix_Admin" hash-for-method="scriptTabValidation">scriptTabValidation</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0002_login_With_Exmpirix_Admin" hash-for-method="tagTabValidation">tagTabValidation</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0002_login_With_Exmpirix_Admin" hash-for-method="testTabValidation">testTabValidation</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="VW_TC.TC0002_login_With_Exmpirix_Admin" hash-for-method="variableTabValidation">variableTabValidation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +170,51 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">VW_TC.TC0000_Debug_Testing</span>
+              <span class="class-name">VW_TC.TC0002_login_With_Exmpirix_Admin</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="TabAvailabilityValidation">
+                  </a> <!-- TabAvailabilityValidation -->
+                  <span class="method-name">TabAvailabilityValidation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="alertTabValidation">
+                  </a> <!-- alertTabValidation -->
+                  <span class="method-name">alertTabValidation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="dashBoardTabValidation">
+                  </a> <!-- dashBoardTabValidation -->
+                  <span class="method-name">dashBoardTabValidation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="footerMandatoryDetails">
+                  </a> <!-- footerMandatoryDetails -->
+                  <span class="method-name">footerMandatoryDetails</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="hammerTabValidation">
+                  </a> <!-- hammerTabValidation -->
+                  <span class="method-name">hammerTabValidation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="headerMandatoryDetails">
+                  </a> <!-- headerMandatoryDetails -->
+                  <span class="method-name">headerMandatoryDetails</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="logInWithExpirixAdmin">
@@ -142,12 +229,33 @@
                   <span class="method-name">scriptTabValidation</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="tagTabValidation">
+                  </a> <!-- tagTabValidation -->
+                  <span class="method-name">tagTabValidation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testTabValidation">
+                  </a> <!-- testTabValidation -->
+                  <span class="method-name">testTabValidation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="variableTabValidation">
+                  </a> <!-- variableTabValidation -->
+                  <span class="method-name">variableTabValidation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hsingh\AppData\Local\Temp\testng-eclipse-196215557\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\hsingh\AppData\Local\Temp\testng-eclipse--140590804\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +264,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;VW_TC.TC0000_Debug_Testing&quot;/&gt;
+      &lt;class name=&quot;VW_TC.TC0002_login_With_Exmpirix_Admin&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -196,20 +304,56 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(11);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'scriptTabValidation')
-data.setCell(0, 2, 'VW_TC.TC0000_Debug_Testing')
-data.setCell(0, 3, 35863);
+data.setCell(0, 2, 'VW_TC.TC0002_login_With_Exmpirix_Admin')
+data.setCell(0, 3, 80686);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'logInWithExpirixAdmin')
-data.setCell(1, 2, 'VW_TC.TC0000_Debug_Testing')
-data.setCell(1, 3, 23224);
+data.setCell(1, 1, 'testTabValidation')
+data.setCell(1, 2, 'VW_TC.TC0002_login_With_Exmpirix_Admin')
+data.setCell(1, 3, 69026);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'logInWithExpirixAdmin')
+data.setCell(2, 2, 'VW_TC.TC0002_login_With_Exmpirix_Admin')
+data.setCell(2, 3, 19624);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'variableTabValidation')
+data.setCell(3, 2, 'VW_TC.TC0002_login_With_Exmpirix_Admin')
+data.setCell(3, 3, 16164);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'tagTabValidation')
+data.setCell(4, 2, 'VW_TC.TC0002_login_With_Exmpirix_Admin')
+data.setCell(4, 3, 14720);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'hammerTabValidation')
+data.setCell(5, 2, 'VW_TC.TC0002_login_With_Exmpirix_Admin')
+data.setCell(5, 3, 5950);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'dashBoardTabValidation')
+data.setCell(6, 2, 'VW_TC.TC0002_login_With_Exmpirix_Admin')
+data.setCell(6, 3, 3987);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'alertTabValidation')
+data.setCell(7, 2, 'VW_TC.TC0002_login_With_Exmpirix_Admin')
+data.setCell(7, 3, 2761);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'TabAvailabilityValidation')
+data.setCell(8, 2, 'VW_TC.TC0002_login_With_Exmpirix_Admin')
+data.setCell(8, 3, 746);
+data.setCell(9, 0, 9)
+data.setCell(9, 1, 'headerMandatoryDetails')
+data.setCell(9, 2, 'VW_TC.TC0002_login_With_Exmpirix_Admin')
+data.setCell(9, 3, 519);
+data.setCell(10, 0, 10)
+data.setCell(10, 1, 'footerMandatoryDetails')
+data.setCell(10, 2, 'VW_TC.TC0002_login_With_Exmpirix_Admin')
+data.setCell(10, 3, 369);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 59 seconds</span>
+              <span class="suite-total-time">Total running time: 3 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,22 +379,58 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">VW_TC.TC0000_Debug_Testing</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">VW_TC.TC0002_login_With_Exmpirix_Admin</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">applicationLaunch</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">logInWithExpirixAdmin</span>
-                <span class="method-start">26240 ms</span>
+                <span class="method-start">33283 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">headerMandatoryDetails</span>
+                <span class="method-start">52908 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">footerMandatoryDetails</span>
+                <span class="method-start">53430 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TabAvailabilityValidation</span>
+                <span class="method-start">53803 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">dashBoardTabValidation</span>
+                <span class="method-start">54549 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">alertTabValidation</span>
+                <span class="method-start">58536 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testTabValidation</span>
+                <span class="method-start">61313 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">tagTabValidation</span>
+                <span class="method-start">130339 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">scriptTabValidation</span>
-                <span class="method-start">49466 ms</span>
+                <span class="method-start">145059 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">variableTabValidation</span>
+                <span class="method-start">225745 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">hammerTabValidation</span>
+                <span class="method-start">241909 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">applicationClose</span>
-                <span class="method-start">85329 ms</span>
+                <span class="method-start">247859 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
