--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="beef9d">  <td>19/10/08 00:17:17</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0000_Debug_Testing.applicationLaunch()[pri:0, instance:VW_TC.TC0000_Debug_Testing@55141def]">&gt;&gt;applicationLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@757004314</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/10/08 00:17:43</td>   <td>26236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0000_Debug_Testing@55141def]">logInWithExpirixAdmin</td> 
-  <td>main@757004314</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/10/08 00:18:06</td>   <td>49462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.scriptTabValidation()[pri:9, instance:VW_TC.TC0000_Debug_Testing@55141def]">scriptTabValidation</td> 
-  <td>main@757004314</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/10/08 00:18:42</td>   <td>85325</td> <td>&nbsp;</td><td title="&lt;&lt;TC0000_Debug_Testing.applicationClose()[pri:0, instance:VW_TC.TC0000_Debug_Testing@55141def]">&lt;&lt;applicationClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@757004314</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:52:46</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0002_login_With_Exmpirix_Admin.applicationLaunch()[pri:0, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">&gt;&gt;applicationLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:53:19</td>   <td>33283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">logInWithExpirixAdmin</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:53:39</td>   <td>52908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.headerMandatoryDetails()[pri:2, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">headerMandatoryDetails</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:53:39</td>   <td>53430</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.footerMandatoryDetails()[pri:3, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">footerMandatoryDetails</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:53:39</td>   <td>53803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.TabAvailabilityValidation()[pri:4, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">TabAvailabilityValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:53:40</td>   <td>54549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.dashBoardTabValidation()[pri:5, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">dashBoardTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:53:44</td>   <td>58536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.alertTabValidation()[pri:6, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">alertTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:53:47</td>   <td>61313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.testTabValidation()[pri:7, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">testTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:54:56</td>   <td>130339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.tagTabValidation()[pri:8, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">tagTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:55:11</td>   <td>145059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.scriptTabValidation()[pri:9, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">scriptTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:56:31</td>   <td>225745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.variableTabValidation()[pri:10, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">variableTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:56:48</td>   <td>241909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.hammerTabValidation()[pri:11, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">hammerTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/08 00:56:53</td>   <td>247859</td> <td>&nbsp;</td><td title="&lt;&lt;TC0002_login_With_Exmpirix_Admin.applicationClose()[pri:0, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">&lt;&lt;applicationClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1279271200</td>   <td></td> </tr>
 </table>
